Your message about the change

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # MongoDB Connection String
-MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/codemuj?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://deepak:<thedontknow>@cluster0.rbv6r1g.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT Configuration
 JWT_SECRET=your_secure_jwt_secret_here
